--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -106,63 +106,63 @@
                         <input type="checkbox" name="Chemical & Biomedical Eng" data-code="(ECH)" id="P21"><label for="P21">Chemical & Biomedical Eng </label>
                         <input type="checkbox" name="Chemistry" data-code="(CHM)" id="P22"><label for="P22">Chemistry</label>
                         <input type="checkbox" name="Child & Family Studies" data-code="(CFS)" id="P23"><label for="P23">Child and Family Studies</label>
-                        <input type="checkbox" name="Childhood Ed & Literacy Stdies" data-code="(EDR)"><label id=>Childhood Ed & Literacy Stdies</label>
-                        <label><input type="checkbox" name="Civil & Environmental Eng" data-code="(EGX)">Civil & Environmental Eng</label>
-                        <label><input type="checkbox" name="Classics (Greek and Latin)" data-code="(CLA)">Classics (Greek and Latin) </label>
-                        <label><input type="checkbox" name="Co-op Education" data-code="(COE)">Co-op Education</label>
-                        <label><input type="checkbox" name="Communication" data-code="(SPE)">Communication</label>
-                        <label><input type="checkbox" name="Communication Sciences & Disorders" data-code="(CSD)">Communication Sciences & Disorders</label>
-                        <label><input type="checkbox" name="Community and Family Health" data-code="(CFH)">Community and Family Health</label>
-                        <label><input type="checkbox" name="Community Experiential Learning" data-code="(CEL)">Community Experiential Learnin</label>
-                        <label><input type="checkbox" name="Counselor Education" data-code="(EDG)">Counselor Education</label>
-                        <label><input type="checkbox" name="Criminology" data-code="(CJP)">Criminology</label>
-                        <label><input type="checkbox" name="Curriculum" data-code="(EDC)">Curriculum </label>
-                        <label><input type="checkbox" name="Dance" data-code="(DAN)">Dance</label>
-                        <label><input type="checkbox" name="Dean's Office" data-code="(DEA)">Dean's Office</label>
-                        <label><input type="checkbox" name="Early Childhood Education" data-code="(EDU)">Early Childhood Education</label>
-                        <label><input type="checkbox" name="Economics" data-code="(ECN)">Economics</label>
-                        <label><input type="checkbox" name="Education - General" data-code="(EDZ)">Education - General </label>
-                        <label><input type="checkbox" name="Educational Leadership" data-code="(ELS)">Educational Leadership </label>
-                        <label><input type="checkbox" name="Educational Psychology" data-code="(EEP)">Educational Psychology</label>
-                        <label><input type="checkbox" name="Electrical Engineering" data-code="(EGE)">Electrical Engineering</label>
-                        <label><input type="checkbox" name="Elementary Education" data-code="(EDE)">Elementary Education </label>
-                        <label><input type="checkbox" name="Engineering Computer Science" data-code="(ESB)">Engineering Computer Science</label>
-                        <label><input type="checkbox" name="English" data-code="(ENG)">English</label>
-                        <label><input type="checkbox" name="English Ed & Speech Comm. Ed" data-code="(EDT)">English Ed & Speech Comm. Ed</label>
-                        <label><input type="checkbox" name="Entrepreneurship" data-code="(ENP)">Entrepreneurship</label>
-                        <label><input type="checkbox" name="Environ. & Occupational Health" data-code="(EOH)">Environ. & Occupational Health</label>
-                        <label><input type="checkbox" name="Environmental Science & Policy Program" data-code="(ESP)">Environmental Science & Policy Program</label>
-                        <label><input type="checkbox" name="Epidemiology and Biostatistics" data-code="(EPB)">Epidemiology and Biostatistics </label>
-                        <label><input type="checkbox" name="Exceptional Child Education" data-code="(EDS)">Exceptional Child Education</label>
-                        <label><input type="checkbox" name="Finance" data-code="(FIN)">Finance </label>
-                        <label><input type="checkbox" name="FMHI" data-code="(FMH)">FMHI </label>
-                        <label><input type="checkbox" name="Foreign Language Education" data-code="(EDX)">Foreign Language Education </label>
-                        <label><input type="checkbox" name="Foundations" data-code="(EDF)">Foundations</label>
-                        <label><input type="checkbox" name="Geography" data-code="(GPY)">Geography</label>
-                        <label><input type="checkbox" name="Geology" data-code="(GLY)">Geology</label>
-                        <label><input type="checkbox" name="Geosciences, School of" data-code="(SGS)">Geosciences, School of</label>
-                        <label><input type="checkbox" name="Global Health" data-code="(GLO)">Global Health</label>
-                        <label><input type="checkbox" name="Government & Intl Affairs" data-code="(GIA)">Government & Intl Affairs</label>
-                        <label><input type="checkbox" name="Graduate School Department" data-code="(GRS)">Graduate School Department</label>
-                        <label><input type="checkbox" name="Health Policy and Management" data-code="(HPM)">Health Policy and Management</label>
-                        <label><input type="checkbox" name="Higher Ed/Community College Ed" data-code="(EDH)">Higher Ed/Community College Ed </label>
-                        <label><input type="checkbox" name="History" data-code="(HTY)">History</label>
-                        <label><input type="checkbox" name="Honors Program" data-code="(HON)">Honors Program</label>
-                        <label><input type="checkbox" name="Hotel & Restaurant Management" data-code="(HRM)">Hotel & Restaurant Management</label>
-                        <label><input type="checkbox" name="Humanities & Cultural Studies" data-code="(HCS)">Humanities & Cultural Studies</label>
-                        <label><input type="checkbox" name="Humanities" data-code="(HUM)">Humanities</label>
-                        <label><input type="checkbox" name="Industrial Systems" data-code="(EGS)">Industrial Systems </label>
-                        <label><input type="checkbox" name="Information Sys & Decision Sci" data-code="(QMB)">Information Sys & Decision Sci </label>
-                        <label><input type="checkbox" name="Information Technology" data-code="(EIT)">Information Technology</label>
-                        <label><input type="checkbox" name="Instructional Technology" data-code="(EDK)">Instructional Technology</label>
-                        <label><input type="checkbox" name="Interdisciplinary Arts & Scien" data-code="(IAS)">Interdisciplinary Arts & Scien </label>
-                        <label><input type="checkbox" name="Interdisciplinary Social Sci" data-code="(ISS)">Interdisciplinary Social Sci</label>
-                        <label><input type="checkbox" name="Interdisciplinary Studies" data-code="(IDS)">Interdisciplinary Studies </label>
-                        <label><input type="checkbox" name="International Studies" data-code="(INT)">International Studies </label>
-                        <label><input type="checkbox" name="Latin Am Studies/Caribbean Ctr" data-code="(LAS)">Latin Am Studies/Caribbean Ctr </label>
-                        <label><input type="checkbox" name="Leadership Studies" data-code="(LDR)">Leadership Studies</label>
-                        <label><input type="checkbox" name="Library and Information Sci." data-code="(LIS)">Library and Information Sci. </label>
-                        <label><input type="checkbox" name="Management and Organization" data-code="(MAN)">Management and Organization </label>
+                        <input type="checkbox" name="Childhood Ed & Literacy Stdies" data-code="(EDR)" id="P22"><label for="P22">Childhood Ed & Literacy Stdies</label>
+                        <input type="checkbox" name="Civil & Environmental Eng" data-code="(EGX)" id="P23"><label for="P23">Civil & Environmental Eng</label>
+                        <input type="checkbox" name="Classics (Greek and Latin)" data-code="(CLA)" id="P24"><label for="P24">Classics (Greek and Latin) </label>
+                        <input type="checkbox" name="Co-op Education" data-code="(COE)" id="P25"><label for="P25">Co-op Education</label>
+                        <input type="checkbox" name="Communication" data-code="(SPE)" id="P26"><label for="P26">Communication</label>
+                        <input type="checkbox" name="Communication Sciences & Disorders" data-code="(CSD)" id="P27"><label for="P27">Communication Sciences & Disorders</label>
+                        <input type="checkbox" name="Community and Family Health" data-code="(CFH)" id="P28"><label for="P28">Community and Family Health</label>
+                        <input type="checkbox" name="Community Experiential Learning" data-code="(CEL)" id="P29"><label for="P29">Community Experiential Learnin</label>
+                        <input type="checkbox" name="Counselor Education" data-code="(EDG)" id="P30"><label for="P30">Counselor Education</label>
+                        <input type="checkbox" name="Criminology" data-code="(CJP)"id="P31"><label="P31">Criminology</label>
+                        <input type="checkbox" name="Curriculum" data-code="(EDC)" id="P32"><label for="P32">Curriculum </label>
+                        <input type="checkbox" name="Dance" data-code="(DAN)" id="P33"><label for="P33">Dance</label>
+                        <input type="checkbox" name="Dean's Office" data-code="(DEA)" id="P34"><label for="P34">Dean's Office</label>
+                        <input type="checkbox" name="Early Childhood Education" data-code="(EDU)" id="P35"><label for="P35">Early Childhood Education</label>
+                        <input type="checkbox" name="Economics" data-code="(ECN)" id="P36"><label for="P36">Economics</label>
+                        <input type="checkbox" name="Education - General" data-code="(EDZ)" id="P37"><label for="P37">Education - General </label>
+                        <input type="checkbox" name="Educational Leadership" data-code="(ELS)" id="P38"><label for="P38">Educational Leadership </label>
+                        <input type="checkbox" name="Educational Psychology" data-code="(EEP)" id="P39"><label for="P39">Educational Psychology</label>
+                        <input type="checkbox" name="Electrical Engineering" data-code="(EGE)" id="P40"><label for="P40">Electrical Engineering</label>
+                        <input type="checkbox" name="Elementary Education" data-code="(EDE)" id="P41"><label for="P41">Elementary Education </label>
+                        <input type="checkbox" name="Engineering Computer Science" data-code="(ESB)" id="P42"><label for="P42">Engineering Computer Science</label>
+                        <input type="checkbox" name="English" data-code="(ENG)" id="P43"><label for="P43">English</label>
+                        <input type="checkbox" name="English Ed & Speech Comm. Ed" data-code="(EDT)" id="P44"><label for="P44">English Ed & Speech Comm. Ed</label>
+                        <input type="checkbox" name="Entrepreneurship" data-code="(ENP)" id="P45"><label for="P45">Entrepreneurship</label>
+                        <input type="checkbox" name="Environ. & Occupational Health" data-code="(EOH)" id="P46"><label for="P46">Environ. & Occupational Health</label>
+                        <input type="checkbox" name="Environmental Science & Policy Program" data-code="(ESP)" id="P47"><label for="P47">Environmental Science & Policy Program</label>
+                        <input type="checkbox" name="Epidemiology and Biostatistics" data-code="(EPB)" id="P48"><label for="P48">Epidemiology and Biostatistics </label>
+                        <input type="checkbox" name="Exceptional Child Education" data-code="(EDS)" id="P49"><label for="P49">Exceptional Child Education</label>
+                        <input type="checkbox" name="Finance" data-code="(FIN)" id="P50"><label for="P50">Finance </label>
+                        <input type="checkbox" name="FMHI" data-code="(FMH)" id="P51"><label for="P51">FMHI </label>
+                        <input type="checkbox" name="Foreign Language Education" data-code="(EDX)" id="P52"><label for="P52">Foreign Language Education </label>
+                        <input type="checkbox" name="Foundations" data-code="(EDF)" id="P53"><label for="P53">Foundations</label>
+                        <input type="checkbox" name="Geography" data-code="(GPY)" id="P54"><label for="P54">Geography</label>
+                        <input type="checkbox" name="Geology" data-code="(GLY)" id="P55"><label for="P55">Geology</label>
+                        <input type="checkbox" name="Geosciences, School of" data-code="(SGS)" id="P56"><label for="P56">Geosciences, School of</label>
+                        <input type="checkbox" name="Global Health" data-code="(GLO)" id="P57"><label for="P57">Global Health</label>
+                        <input type="checkbox" name="Government & Intl Affairs" data-code="(GIA)" id="P58"><label for="P58">Government & Intl Affairs</label>
+                        <input type="checkbox" name="Graduate School Department" data-code="(GRS)" id="P59"><label for="P59">Graduate School Department</label>
+                        <input type="checkbox" name="Health Policy and Management" data-code="(HPM)" id="P60"><label for="P60">Health Policy and Management</label>
+                        <input type="checkbox" name="Higher Ed/Community College Ed" data-code="(EDH)" id="P61"><label for="P61">Higher Ed/Community College Ed </label>
+                        <input type="checkbox" name="History" data-code="(HTY)" id="P62"><label for="P62">History</label>
+                        <input type="checkbox" name="Honors Program" data-code="(HON)" id="P63"><label for="P63">Honors Program</label>
+                        <input type="checkbox" name="Hotel & Restaurant Management" data-code="(HRM)" id="P64"><label for="P64">Hotel & Restaurant Management</label>
+                        <input type="checkbox" name="Humanities & Cultural Studies" data-code="(HCS)" id="P65"><label for="P65">Humanities & Cultural Studies</label>
+                        <input type="checkbox" name="Humanities" data-code="(HUM)" id="P66"><label for="P66">Humanities</label>
+                        <input type="checkbox" name="Industrial Systems" data-code="(EGS)" id="P67"><label for="P67">Industrial Systems </label>
+                        <input type="checkbox" name="Information Sys & Decision Sci" data-code="(QMB)" id="P68"><label for="P68">Information Sys & Decision Sci </label>
+                        <input type="checkbox" name="Information Technology" data-code="(EIT)" id="P69"><label for="P69">Information Technology</label>
+                        <input type="checkbox" name="Instructional Technology" data-code="(EDK)" id="P70"><label for="P70">Instructional Technology</label>
+                        <input type="checkbox" name="Interdisciplinary Arts & Scien" data-code="(IAS)" id="P71"><label for="P71">Interdisciplinary Arts & Scien </label>
+                        <input type="checkbox" name="Interdisciplinary Social Sci" data-code="(ISS)" id="P72"><label for="P72">Interdisciplinary Social Sci</label>
+                        <input type="checkbox" name="Interdisciplinary Studies" data-code="(IDS)" id="P73"><label for="P73">Interdisciplinary Studies </label>
+                        <input type="checkbox" name="International Studies" data-code="(INT)" id="P74"><label for="P74">International Studies</label>
+                        <input type="checkbox" name="Latin Am Studies/Caribbean Ctr" data-code="(LAS)" id="P75"><label for="P75">Latin Am Studies/Caribbean Ctr </label>
+                        <input type="checkbox" name="Leadership Studies" data-code="(LDR)" id="P76"><label for="P76">Leadership Studies</label>
+                        <input type="checkbox" name="Library and Information Sci." data-code="(LIS)" id="P77"><label for="P77">Library and Information Sci. </label>
+                        <input type="checkbox" name="Management and Organization" data-code="(MAN)" id="P78"><label for="P78">Management and Organization </label>
                         <label><input type="checkbox" name="Marine Science" data-code="(MSC)">Marine Science</label>
                         <label><input type="checkbox" name="Marketing" data-code="(MKT)">Marketing </label>
                         <label><input type="checkbox" name="Mass Communication" data-code="(COM)">Mass Communication</label>
