--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -163,47 +163,47 @@
                         <input type="checkbox" name="Leadership Studies" data-code="(LDR)" id="P76"><label for="P76">Leadership Studies</label>
                         <input type="checkbox" name="Library and Information Sci." data-code="(LIS)" id="P77"><label for="P77">Library and Information Sci. </label>
                         <input type="checkbox" name="Management and Organization" data-code="(MAN)" id="P78"><label for="P78">Management and Organization </label>
-                        <label><input type="checkbox" name="Marine Science" data-code="(MSC)">Marine Science</label>
-                        <label><input type="checkbox" name="Marketing" data-code="(MKT)">Marketing </label>
-                        <label><input type="checkbox" name="Mass Communication" data-code="(COM)">Mass Communication</label>
-                        <label><input type="checkbox" name="Mathematics and Statistics" data-code="(MTH)">Mathematics and Statistics </label>
-                        <label><input type="checkbox" name="Mathematics Education" data-code="(EDO)">Mathematics Education</label>
-                        <label><input type="checkbox" name="Measurement-Research" data-code="(EDQ)">Measurement-Research</label>
-                        <label><input type="checkbox" name="Mechanical Engineering" data-code="(EGR)">Mechanical Engineering</label>
-                        <label><input type="checkbox" name="Medical Sciences" data-code="(MED)">Medical Sciences</label>
-                        <label><input type="checkbox" name="Mental Health Law & Policy" data-code="(MHL)">Mental Health Law & Policy</label>
-                        <label><input type="checkbox" name="Music" data-code="(MUS)">Music</label>
-                        <label><input type="checkbox" name="Music Education" data-code="(EDM)">Music Education </label>
-                        <label><input type="checkbox" name="Naval (ROTC)" data-code="(NVY)">Naval (ROTC)</label>
-                        <label><input type="checkbox" name="Nursing (NUR)">Nursing</label>
-                        <label><input type="checkbox" name="Philosophy" data-code="(PHI)">Philosophy </label>
-                        <label><input type="checkbox" name="Physical Education (Elective)" data-code="(PEB)">Physical Education (Elective)</label>
-                        <label><input type="checkbox" name="Physical Education Elective" data-code="(EDJ)">Physical Education Elective</label>
-                        <label><input type="checkbox" name="Physical Education for Teacher" data-code="(EDP)">Physical Education for Teacher </label>
-                        <label><input type="checkbox" name="Physical Therapy" data-code="(PHT)">Physical Therapy</label>
-                        <label><input type="checkbox" name="Physics" data-code="(PHY)">Physics </label>
-                        <label><input type="checkbox" name="Political Science" data-code="(POL)">Political Science</label>
-                        <label><input type="checkbox" name="Psychology" data-code="(PSY)">Psychology</label>
-                        <label><input type="checkbox" name="Public Administration" data-code="(PAD)">Public Administration </label>
-                        <label><input type="checkbox" name="Public Health" data-code="(PHC)">Public Health</label>
-                        <label><input type="checkbox" name="Reading & Learning Strategies" data-code="(RLS)">Reading & Learning Strategies </label>
-                        <label><input type="checkbox" name="Rehab & Mental Hlth Counseling" data-code="(REH)">Rehab & Mental Hlth Counseling</label>
-                        <label><input type="checkbox" name="Religious Studies" data-code="(REL)">Religious Studies</label>
-                        <label><input type="checkbox" name="School of Aging Studies" data-code="(GEY)">School of Aging Studies</label>
-                        <label><input type="checkbox" name="School of Information" data-code="(LIS)">School of Information</label>
-                        <label><input type="checkbox" name="School of Public Affairs" data-code="(SPF)">School of Public Affairs</label>
-                        <label><input type="checkbox" name="School Psychology" data-code="(EPS)">School Psychology </label>
-                        <label><input type="checkbox" name="Science Education" data-code="(EDN)">Science Education </label>
-                        <label><input type="checkbox" name="Secondary Education, General" data-code="(EDI)">Secondary Education, General</label>
-                        <label><input type="checkbox" name="Social Foundations" data-code="(ESF)">Social Foundations </label>
-                        <label><input type="checkbox" name="Social Science Education" data-code="(EDW)">Social Science Education</label>
-                        <label><input type="checkbox" name="Social Work" data-code="(SOK)">Social Work </label>
-                        <label><input type="checkbox" name="Sociology" data-code="(SOC)">Sociology</label>
-                        <label><input type="checkbox" name="Student Affairs - General" data-code="(SAG)">Student Affairs - General</label>
-                        <label><input type="checkbox" name="Student Leadership" data-code="(STL)">Student Leadership</label>
-                        <label><input type="checkbox" name="Theater & Dance" data-code="(TAR)">Theater & Dance </label>
-                        <label><input type="checkbox" name="Women's and Gender Studies" data-code="(WST)">Women's and Gender Studies</label>
-                        <label><input type="checkbox" name="World Languages" data-code="(WLE)">World Languages </label>
+                        <input type="checkbox" name="Marine Science" data-code="(MSC)" id="P79"><label for="P79">Marine Science</label>
+                        <input type="checkbox" name="Marketing" data-code="(MKT)" id="P80"><label for="P80">Marketing </label>
+                        <input type="checkbox" name="Mass Communication" data-code="(COM)" id="P81"><label for="P81">Mass Communication</label>
+                        <input type="checkbox" name="Mathematics and Statistics" data-code="(MTH)" id="P82"><label for="P82">Mathematics and Statistics </label>
+                        <input type="checkbox" name="Mathematics Education" data-code="(EDO)" id="P83"><label for="P83">Mathematics Education</label>
+                        <input type="checkbox" name="Measurement-Research" data-code="(EDQ)" id="P84"><label for="P84">Measurement-Research</label>
+                        <input type="checkbox" name="Mechanical Engineering" data-code="(EGR)" id="P85"><label for="P85">Mechanical Engineering</label>
+                        <input type="checkbox" name="Medical Sciences" data-code="(MED)" id="P86"><label for="P86">Medical Sciences</label>
+                        <input type="checkbox" name="Mental Health Law & Policy" data-code="(MHL)" id="P87"><label for="P87">Mental Health Law & Policy</label>
+                        <input type="checkbox" name="Music" data-code="(MUS)" id="P88"><label for="P88">Music</label>
+                        <input type="checkbox" name="Music Education" data-code="(EDM)" id="P88"><label for="P88">Music Education </label>
+                        <input type="checkbox" name="Naval (ROTC)" data-code="(NVY)" id="P89"><label for="P89">Naval (ROTC)</label>
+                        <input type="checkbox" name="Nursing (NUR)" id="P90"><label for="P90">Nursing</label>
+                        <input type="checkbox" name="Philosophy" data-code="(PHI)" id="P91"><label for="P91">Philosophy </label>
+                        <input type="checkbox" name="Physical Education (Elective)" data-code="(PEB)" id="P92"><label for="P92">Physical Education (Elective)</label>
+                        <input type="checkbox" name="Physical Education Elective" data-code="(EDJ)" id="P93"><label for="P93">Physical Education Elective</label>
+                        <input type="checkbox" name="Physical Education for Teacher" data-code="(EDP)" id="P94"><label for="P94">Physical Education for Teacher </label>
+                        <input type="checkbox" name="Physical Therapy" data-code="(PHT)" id="P95"><label for="P95">Physical Therapy</label>
+                        <input type="checkbox" name="Physics" data-code="(PHY)" id="P96"><label for="P96">Physics </label>
+                        <input type="checkbox" name="Political Science" data-code="(POL)" id="P97"><label for="P97">Political Science</label>
+                        <input type="checkbox" name="Psychology" data-code="(PSY)" id="P98"><label for="P98">Psychology</label>
+                        <input type="checkbox" name="Public Administration" data-code="(PAD)" id="P99"><label for="P99">Public Administration</label>
+                        <input type="checkbox" name="Public Health" data-code="(PHC)" id="P100"><label for="P100">Public Health</label>
+                        <input type="checkbox" name="Reading & Learning Strategies" data-code="(RLS)" id="P101"><label for="P101">Reading & Learning Strategies </label>
+                        <input type="checkbox" name="Rehab & Mental Hlth Counseling" data-code="(REH)" id="P102"><label for="P102">Rehab & Mental Hlth Counseling</label>
+                        <input type="checkbox" name="Religious Studies" data-code="(REL)" id="P103"><label for="P103">Religious Studies</label>
+                        <input type="checkbox" name="School of Aging Studies" data-code="(GEY)" id="P104"><label for="P104">School of Aging Studies</label>
+                        <input type="checkbox" name="School of Information" data-code="(LIS)" id="P105"><label for="P105">School of Information</label>
+                        <input type="checkbox" name="School of Public Affairs" data-code="(SPF)" id="P106"><label for="P106">School of Public Affairs</label>
+                        <input type="checkbox" name="School Psychology" data-code="(EPS)" id="P107"><label for="P107">School Psychology</label>
+                        <input type="checkbox" name="Science Education" data-code="(EDN)"><label for="P108">Science Education</label>
+                        <input type="checkbox" name="Secondary Education, General" data-code="(EDI)" id="P109"><label for="P109">Secondary Education, General</label>
+                        <input type="checkbox" name="Social Foundations" data-code="(ESF)" id="P110"><label for="P110">Social Foundations</label>
+                        <input type="checkbox" name="Social Science Education" data-code="(EDW)" id="P111"><label for="P111">Social Science Education</label>
+                        <input type="checkbox" name="Social Work" data-code="(SOK)" id="P112"><label for="P112">Social Work</label>
+                        <input type="checkbox" name="Sociology" data-code="(SOC)" id="P113"><label for="P113">Sociology</label>
+                        <input type="checkbox" name="Student Affairs - General" data-code="(SAG)" id="P114"><label for="P114">Student Affairs - General</label>
+                        <input type="checkbox" name="Student Leadership" data-code="(STL)" id="P115"><label for="P115">Student Leadership</label>
+                        <input type="checkbox" name="Theater & Dance" data-code="(TAR)" id="P116"><label for="P116">Theater & Dance</label>
+                        <input type="checkbox" name="Women's and Gender Studies" data-code="(WST)" id="P117"><label for="P117">Women's and Gender Studies</label>
+                        <input type="checkbox" name="World Languages" data-code="(WLE)" id="P118"><label for="P118">World Languages</label>
 
         </fieldset>
       </form>
