--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -115,7 +115,7 @@
                         <input type="checkbox" name="Community and Family Health" data-code="(CFH)" id="P28"><label for="P28">Community and Family Health</label>
                         <input type="checkbox" name="Community Experiential Learning" data-code="(CEL)" id="P29"><label for="P29">Community Experiential Learnin</label>
                         <input type="checkbox" name="Counselor Education" data-code="(EDG)" id="P30"><label for="P30">Counselor Education</label>
-                        <input type="checkbox" name="Criminology" data-code="(CJP)"id="P31"><label="P31">Criminology</label>
+                        <input type="checkbox" name="Criminology" data-code="(CJP)" id="P31"><label="P31">Criminology</label>
                         <input type="checkbox" name="Curriculum" data-code="(EDC)" id="P32"><label for="P32">Curriculum </label>
                         <input type="checkbox" name="Dance" data-code="(DAN)" id="P33"><label for="P33">Dance</label>
                         <input type="checkbox" name="Dean's Office" data-code="(DEA)" id="P34"><label for="P34">Dean's Office</label>
@@ -173,7 +173,7 @@
                         <input type="checkbox" name="Medical Sciences" data-code="(MED)" id="P86"><label for="P86">Medical Sciences</label>
                         <input type="checkbox" name="Mental Health Law & Policy" data-code="(MHL)" id="P87"><label for="P87">Mental Health Law & Policy</label>
                         <input type="checkbox" name="Music" data-code="(MUS)" id="P88"><label for="P88">Music</label>
-                        <input type="checkbox" name="Music Education" data-code="(EDM)" id="P88"><label for="P88">Music Education </label>
+                        <input type="checkbox" name="Music Education" data-code="(EDM)" id="P121"><label for="P121">Music Education </label>
                         <input type="checkbox" name="Naval (ROTC)" data-code="(NVY)" id="P89"><label for="P89">Naval (ROTC)</label>
                         <input type="checkbox" name="Nursing (NUR)" id="P90"><label for="P90">Nursing</label>
                         <input type="checkbox" name="Philosophy" data-code="(PHI)" id="P91"><label for="P91">Philosophy </label>
@@ -213,6 +213,9 @@
   <aside><h6>Ampersands possibly throw errors in accessiblity testing</h6></aside>
   <footer>
     <h4>References</h4>
+    <ul>
+      <li><h3>Last Number 121</h3></li>
+      </ul>
     <ul>
       <li><a href="http://www.html5rocks.com/en/tutorials/forms/constraintvalidation/">Form Constraint Validation</a></li>
       <li><a href="http://api.jquery.com/serializeArray/">JQuery serializeArray</a></li>
