--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -115,7 +115,7 @@
                         <input type="checkbox" name="Community and Family Health" data-code="(CFH)" id="P28"><label for="P28">Community and Family Health</label>
                         <input type="checkbox" name="Community Experiential Learning" data-code="(CEL)" id="P29"><label for="P29">Community Experiential Learnin</label>
                         <input type="checkbox" name="Counselor Education" data-code="(EDG)" id="P30"><label for="P30">Counselor Education</label>
-                        <input type="checkbox" name="Criminology" data-code="(CJP)" id="P31"><label="P31">Criminology</label>
+                        <input type="checkbox" name="Criminology" data-code="(CJP)" id="P31"><label for="P31">Criminology</label>
                         <input type="checkbox" name="Curriculum" data-code="(EDC)" id="P32"><label for="P32">Curriculum </label>
                         <input type="checkbox" name="Dance" data-code="(DAN)" id="P33"><label for="P33">Dance</label>
                         <input type="checkbox" name="Dean's Office" data-code="(DEA)" id="P34"><label for="P34">Dean's Office</label>
