--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -193,7 +193,7 @@
                         <input type="checkbox" name="School of Information" data-code="(LIS)" id="P105"><label for="P105">School of Information</label>
                         <input type="checkbox" name="School of Public Affairs" data-code="(SPF)" id="P106"><label for="P106">School of Public Affairs</label>
                         <input type="checkbox" name="School Psychology" data-code="(EPS)" id="P107"><label for="P107">School Psychology</label>
-                        <input type="checkbox" name="Science Education" data-code="(EDN)"><label for="P108">Science Education</label>
+                        <input type="checkbox" name="Science Education" data-code="(EDN)" id="P108"><label for="P108">Science Education</label>
                         <input type="checkbox" name="Secondary Education, General" data-code="(EDI)" id="P109"><label for="P109">Secondary Education, General</label>
                         <input type="checkbox" name="Social Foundations" data-code="(ESF)" id="P110"><label for="P110">Social Foundations</label>
                         <input type="checkbox" name="Social Science Education" data-code="(EDW)" id="P111"><label for="P111">Social Science Education</label>
