--- a/tasks/form1/test4.html
+++ b/tasks/form1/test4.html
@@ -237,7 +237,7 @@
     });
   }
  
-  $( ":checkbox" ).click( showValues );
+  $( ".USF:checkbox" ).click( showValues );
   $( "select" ).change( showValues );
   showValues();
 </script>
