--- a/tasks/form1/test4.html
+++ b/tasks/form1/test4.html
@@ -237,10 +237,11 @@
     });
   }
  
-  $( ".USF:checkbox" ).click( showValues );
+  $( ":checkbox" ).click( showValues );
   $( "select" ).change( showValues );
   showValues();
 </script>
   </body>
 </html>
         
+  
