--- a/tasks/form1/test4.html
+++ b/tasks/form1/test4.html
@@ -35,6 +35,9 @@
 <aside>
 <p><b>Results:</b> <span id="results"></span></p>
 </aside>
+<aside>
+<p><b>ResultsUSF:</b> <span id="resultsUSF"></span></p>
+</aside>
   <article itemscope itemtype="http://schema.org/Place">
     <header itemprop="mainEntityOfPage"><h1>Form One Test Four</h1></header>
     <aside><h4>Needs the following:</h4>
@@ -240,6 +243,19 @@
   $( ":checkbox" ).click( showValues );
   $( "select" ).change( showValues );
   showValues();
+</script>
+
+  function showValuesUSF() {
+    var fields = $( ".USF" ).serializeArray();
+    $( "#resultsUSF" ).empty();
+    jQuery.each( fields, function( i, field ) {
+      $( "#resultsUSF" ).append( field.value + " " );
+    });
+  }
+ 
+  $( ":checkbox" ).click( showValues );
+  $( "select" ).change( showValuesUSF );
+  showValuesUSF();
 </script>
   </body>
 </html>
