--- a/tasks/form1/test4.html
+++ b/tasks/form1/test4.html
@@ -253,7 +253,7 @@
     });
   }
  
-  $( ":checkbox" ).click( showValues );
+  $( ":checkbox" ).click( showValuesUSF );
   $( "select" ).change( showValuesUSF );
   showValuesUSF();
   
