--- a/tasks/form1/test4.html
+++ b/tasks/form1/test4.html
@@ -65,8 +65,8 @@
                  <fieldset>
                 <legend>Which College Do You Wish to Attend?</legend>
                         <input type="checkbox" name="Business" value="Business" class="USF USFSP USFSM (BM) (BP) (BA)" id="C1"><label for="C1">Business</label>
-                        <input type="checkbox" name="Technology and Innovation" value="Technology and Innovation" id="C2"><label for="C2">Technology and Innovation</label>
-                        <input type="checkbox" name="Arts and Sciences" value="Arts and Sciences" id="C3"><label for="C3">Arts & Sciences</label>
+                        <input type="checkbox" name="Technology and Innovation" value="Technology and Innovation" class="(TT)" id="C2"><label for="C2">Technology and Innovation</label>
+                        <input type="checkbox" name="Arts and Sciences" value="Arts and Sciences" class="USF USFSP USFSM (EM) (EP) (ED)" id="C3"><label for="C3">Arts & Sciences</label>
                         <input type="checkbox" name="Education" value="Education" id="C4"><label for="C4">Education</label>
                         <input type="checkbox" name="Human and Social Sciences" value="Human and Social Sciences" id="C5"><label for="C5">Human and Social Sciences</label>
                         <input type="checkbox" name="Behavioral and Community Sciences" value="Behavioral and Community Sciences" id="C6"><label for="C6">Behavioral and Community Sciences </label>
